# trackcpp

./: .clang-tidy  .gitignore  CITATION.cff  INSTALL  INSTALL.md  Makefile  README.md  VERSION  accelerator.h  auxiliary.h  commands.cpp  commands.h  dynap.cpp  dynap.h  elements.cpp  elements.h  exec.cpp  flat_file.cpp  flat_file.h  kicktable.cpp  kicktable.h  lattice.cpp  lattice.h  mptaskmgr.cpp  mptaskmgr.h  multithreads.cpp  multithreads.h  naff.cpp  naff.h  optics.cpp  optics.h  output.cpp  output.h  passmethods.cpp  passmethods.h  passmethods.hpp  pos.h  sirius_v500.cpp  tests.cpp  tpsa.h  (+5 more)
buildobjects/: .gitignore  clean.sh  create.sh  createcolor.sh  setup.py
python_package/: .gitignore  INSTALL  LICENSE  Makefile  README.md  VERSION  accelerator.i  compile  elements.i  elementswrapper.cpp  elementswrapper.h  interface.cpp  interface.h  linalg.i  naff.i  optics.i  pyproject.toml  setup.py  trackcpp.i
python_swig_module/: .gitignore  Makefile  __init__.py  elements.i  elementswrapper.h  interface.cpp  interface.h  setup.py  trackcpp.i
src/: accelerator.cpp  auxiliary.cpp  commands.cpp  commands.h  diffusion_matrix.cpp  dynap.cpp  elements.cpp  exec.cpp  field3d.cpp  flat_file.cpp  kicktable.cpp  lattice.cpp  linalg.cpp  multithreads.cpp  naff.cpp  naff.h  naff_utils.h  optics.cpp  output.cpp  passmethods.cpp  sirius_v500.cpp  tests.cpp  trackcpp.cpp  tracking.cpp
tests/: .gitignore  Makefile  si_v07_c05.txt  test-kickmap.cpp  test_kicktable.txt
tools/: compile-command.sh  static-analyser.sh
tracking_mp/: Makefile  fmap_mp.cc  fmap_mp.h  fmapdp_mp.cc  (+4 more)
(+24 files in other folders)
